# PESUIO

a1/pdf/: README.md  pdf.py
a1/website/: .env
a1/website/data/: md
agentic/crewai/latest_ai_development/: pyproject.toml  report.md
agentic/llama-agent/utils/: schema.py
assignment1/pdf/: .env  README.md
assignment1/website/: README.md  website.py
learning_assistant/: README.md  pyproject.toml  questions.md  summary.md
learning_assistant/src/learning_assistant/: crew.py  main.py
learning_assistant/src/learning_assistant/config/: agents.yaml  tasks.yaml
learning_assistant/src/learning_assistant/tools/: custom_tool.py
naiverag/: .env  embedded_chunks.json  main.py  output.md  rag.py
